--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatiple" content="IE=edge" />
+  <link rel="stylesheet" href="style.css"/>
+  <title>Jogo Mentalista</title>
+</head>
+<body>
 <div class="container">
   <h1 class="page-title">
     Mentalista
@@ -8,3 +19,5 @@
   <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
   <img src="https://caelum-online-public.s3.amazonaws.com/assets-imersaodev/Ilustra%C3%A7%C3%A3o-c%C3%A9rebro+1.png">
 </a> 
+</body>
+</html>
