--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
   <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
   <img src="https://caelum-online-public.s3.amazonaws.com/assets-imersaodev/Ilustra%C3%A7%C3%A3o-c%C3%A9rebro+1.png">
 </a> 
+<script src="./script.js"></script>
 </body>
 </html>
